--- a/404.html
+++ b/404.html
@@ -29,7 +29,8 @@
             <div class="number">4</div>
         </div>
         <div class="text">Oops. The page you're looking for doesn't exist.</div>
-        <a class="button" href="https://rohitks.com.np/">Back Home</a>
+        <a class="button" href="https://nepali-online-typing.meropractice.">Back Home</a>
     </div>
 </body>
 </html>
+
